--- a/SnowBoberOOP/SnowBoberOOP.vcxproj
+++ b/SnowBoberOOP/SnowBoberOOP.vcxproj
@@ -82,8 +82,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\Users\natal\OneDrive\Pulpit\SFML-2.5.1\include;$(VC_IncludePath);$(WindowsSDK_IncludePath);;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Users\natal\OneDrive\Pulpit\SFML-2.5.1\lib;$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64);$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Users\bartek\desktop\SFML-2.5.1\include;$(VC_IncludePath);$(WindowsSDK_IncludePath);;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\bartek\desktop\SFML-2.5.1\lib;$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64);$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
@@ -163,6 +163,7 @@
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Position.cpp" />
     <ClCompile Include="Rail.cpp" />
+    <ClCompile Include="ResultBind.cpp" />
     <ClCompile Include="ScorePoint.cpp" />
     <ClCompile Include="SnowBoberOOP.cpp" />
     <ClCompile Include="Util.cpp" />
@@ -189,6 +190,7 @@
     <ClInclude Include="PlayerState.h" />
     <ClInclude Include="Position.h" />
     <ClInclude Include="Rail.h" />
+    <ClInclude Include="ResultBind.h" />
     <ClInclude Include="ScorePoint.h" />
     <ClInclude Include="Util.h" />
     <ClInclude Include="Visual.h" />
