--- a/SnowBoberOOP/SnowBoberOOP.vcxproj
+++ b/SnowBoberOOP/SnowBoberOOP.vcxproj
@@ -158,6 +158,7 @@
     <ClCompile Include="EntityWithTexture.cpp" />
     <ClCompile Include="Grid.cpp" />
     <ClCompile Include="GridStick.cpp" />
+    <ClCompile Include="HighScores.cpp" />
     <ClCompile Include="Life.cpp" />
     <ClCompile Include="Obstacle.cpp" />
     <ClCompile Include="Player.cpp" />
@@ -179,6 +180,7 @@
     <ClInclude Include="EntityWithTexture.h" />
     <ClInclude Include="Grid.h" />
     <ClInclude Include="GridStick.h" />
+    <ClInclude Include="HighScores.h" />
     <ClInclude Include="ICollidable.h" />
     <ClInclude Include="IPlayerActions.h" />
     <ClInclude Include="IRenderable.h" />
